#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation; either version 2 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program. If not, see <http://www.gnu.org/licenses/>
################################################################################
v0.7.0
- Refactoring of inventory classes and printing
- Renaming of products to replace underscores (_) with dashes (-) in the product name
- Addition of gips_project script (print inventory, create browse images)

v0.6.8
- added Algorithm base class and updated scripts to utilize Algorithm class
- additional algorithm scripts added (gips_tclass, gips_truth, gips_mask)

landsat:
- fixed check of negative reflectances (was converted to NoData)
- fixed bug where AOD was not calculating long term average if data not available

v0.6.7
- changed library name to GIPS
- added algorithms module back to main GIPS
- bumped GIPPY dependency to 0.9.7

landsat:
- added tassled cap transformation
- reflectance not allowed to be negative (capped at 0)


v0.6.6
- removed masking feature from 'project' command (replaced with gip_mask)
- changed file naming for project files.  Directory named with shape or tileid and resolution, files named  date_sensor_product
- added gip.py script for general purpose processing on project data directories
- project: metadata properly copied from data
- metadata added to all processed files
- bumped version of GIPPY dependency to 0.9.6

landsat changes:
- exception handling when calling atmospheric model
- added NDWI and MSAVI2 indices to products