@@ -20,6 +20,7 @@ v0.7.0
 - Refactoring of inventory classes and printing
 - Renaming of products to replace underscores (_) with dashes (-) in the product name
 - Addition of gips_project script (print inventory, create browse images)
+- Changed naming convention of project directories to shapefile_resolution_datasetname
 
 v0.6.8
 - added Algorithm base class and updated scripts to utilize Algorithm class
